--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Comfortaa', sans-serif;
-    background-color: #f4fff4;
+    background-color: #e6efe6;
     color: #1a1a1a;
     line-height: 1.8;
   }
