Update RegistryPanel toggle position for improved layout

--- a/client/src/styles/RegistryPanel.css
+++ b/client/src/styles/RegistryPanel.css
@@ -1,7 +1,7 @@
 .registry-toggle {
   position: fixed;
-  top: 1rem;
-  right: 1rem;
+  top: 50px;
+  right: 50px;
   background-color: transparent;
   color: #2f855a;
   border: none;
